fixed alignment issues in services.html

--- a/style.css
+++ b/style.css
@@ -381,13 +381,13 @@ a{
     font-size: 1.5vw;
     margin: 3vw;
 }
-
 #services-body{
     display: flex;
     justify-content: space-evenly;
     text-align: center;
     align-items: center;
-    margin-bottom: 10vw;
+    margin: 4vw 0 10vw 0;
+
 }
 #service-left h1{
     font-size: 2.5vw;
@@ -398,7 +398,7 @@ a{
 }
 #service-left h5{
     font-size: 1.5vw;
-    margin: 4vw;
+    margin: 2vw;
     color: rgb(9, 80, 9);
 }
 #service-left li{
